# vt-sample-project

./: CMakeLists.txt  README.md  build_with_libs.cmake  build_with_tpl.cmake
src/: sample.cc  sample.h
vt-runtime/src/: sample.cc  sample.h
vt-trace-only/src/: sample.cc
